[gd_scene load_steps=9 format=3 uid="uid://b8xiq1fbsdh8t"]

[ext_resource type="Script" path="res://scripts/components/state_machine.gd" id="1_dv01j"]
[ext_resource type="Script" path="res://scripts/entities/horse.gd" id="1_watq7"]
[ext_resource type="SpriteFrames" uid="uid://donupm7n5iqe6" path="res://assets/sprites/horse_animations.tres" id="2_in7er"]
[ext_resource type="Script" path="res://scripts/entities/states/horse_idle_state.gd" id="2_y6ryr"]
[ext_resource type="Script" path="res://scripts/entities/states/horse_walking_state.gd" id="3_tkmk7"]
[ext_resource type="Script" path="res://scripts/entities/states/horse_cantering_state.gd" id="4_7viy2"]
[ext_resource type="Script" path="res://scripts/entities/states/horse_galloping_state.gd" id="5_rxeaq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uluy3"]
size = Vector2(128, 96)

[node name="Horse" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_watq7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uluy3")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_in7er")
animation = &"idle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_dv01j")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_y6ryr")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("3_tkmk7")

[node name="Cantering" type="Node" parent="StateMachine"]
script = ExtResource("4_7viy2")

[node name="Galloping" type="Node" parent="StateMachine"]
script = ExtResource("5_rxeaq")

[node name="SpeedTimer" type="Timer" parent="."]

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="KnightMount" type="RemoteTransform2D" parent="."]
position = Vector2(0, -38)

[node name="LanceMount" type="RemoteTransform2D" parent="."]
position = Vector2(0, -75)
